--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Дни воинской славы</title>
 </head>
 <body>
-    <h1></h1>
+    <div class="first-page">
+        <img src="">
+        <h1 class="main-header">дни воинской славы</h1>
+    </div>
 </body>
 </html>
