--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,5 +11,20 @@
         <img src="">
         <h1 class="main-header">дни воинской славы</h1>
     </div>
+
+    <div class="second-page">
+        <p>
+            Дни воинской славы Великой Отечественной войны <br>
+            <p class="secon-page-text">представляют собой важные моменты в истории нашей страны, 
+            отражающие героизм и самоотверженность людей, которые сражались 
+            за свою Родину. Этот сайт предлагает интерактивную карту, на которой
+             отмечены ключевые события и операции, происходившие в разные дни войны.
+            Каждая метка на карте связана с конкретными событиями, которые изменили 
+            ход истории. Здесь можно найти информацию о крупных сражениях, стратегических 
+            маневрах и значимых победах, а также о людях, стоявших за этими событиями. 
+            Мы стремимся создать пространство для изучения и осмысления, где каждый сможет 
+            глубже понять, как эти дни воинской славы повлияли на судьбы миллионов.</p>
+        </p>
+    </div>
 </body>
 </html>
