--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Дни воинской славы</title>
 </head>
 <body>
@@ -12,8 +11,8 @@
     <div class="pages">
     <!-- Стартовая страница  -->
     <div class="first-page section">
-        <img src="/static/images/main_img_blur.png" class="main-img-blur"> <!-- Размытое изображение -->
-        <img src="/static/images/main_img.png" class="main-img"> <!-- Основное изображение -->
+        <img src="images/main_img_blur.png" class="main-img-blur"> <!-- Размытое изображение -->
+        <img src="images/main_img.png" class="main-img"> <!-- Основное изображение -->
         <h1 class="main-header">дни воинской славы</h1>
     </div>
 
@@ -36,7 +35,7 @@
     
 
     <div class="main-map section" id="map">
-        <img src="/static/images/main_map.png" width="90%" height="60%">
+        <img src="images/main_map.png" width="90%" height="60%">
         <a href="#1" class="marker marker1"></a>
         <a href="#2" class="marker marker2"></a>
         <a href="#3" class="marker marker3"></a>
@@ -53,7 +52,7 @@
     <!-- 27 января -->
     <div class="day-background">
         <div class="day-section section" id="1">
-            <img src="/static/images/map27.png" width="40%" height="40%">
+            <img src="images/map27.png" width="40%" height="40%">
             <p class="day-description"> 
                 27 января — День полного освобождения Ленинграда от фашистской блокады 
                 (1944 год)<br> 27 января 1944 года стал знаковым днем в истории Великой 
@@ -74,7 +73,7 @@
     <!-- 2 февраля -->
     <div class="day-background">
         <div class="day-section section" id="2">
-            <img src="/static/images/map27.png" width="40%" height="40%">
+            <img src="images/map27.png" width="40%" height="40%">
             <p class="day-description"> 
                 2 февраля — День разгрома советскими войсками немецко-фашистских войск 
                 в Сталинградской битве (1943 год) <br> 2 февраля 1943 года завершилась одна 
@@ -95,7 +94,7 @@
     <!-- 9 мая -->
     <div class="day-background">
         <div class="day-section section" id="3">
-            <img src="/static/images/map27.png" width="40%" height="40%">
+            <img src="images/map27.png" width="40%" height="40%">
             <p class="day-description"> 
                 9 мая — День Победы Советского народа в Великой Отечественной войне 
                 1941—1945 годов (1945 год) <br> 9 мая 1945 года — день, когда была подписана 
@@ -116,7 +115,7 @@
     <!-- 12 мая -->
     <div class="day-background">
         <div class="day-section section" id="4">
-            <img src="/static/images/map27.png" width="40%" height="40%">
+            <img src="images/map27.png" width="40%" height="40%">
             <p class="day-description"> 
                 12 мая — День победного завершения советскими войсками Крымской 
                 наступательной операции (1944 год) <br> 12 мая 1944 года советские войска 
@@ -138,7 +137,7 @@
     <!-- 23 августа  -->
     <div class="day-background">
         <div class="day-section section" id="5">
-            <img src="/static/images/map27.png" width="40%" height="40%">
+            <img src="images/map27.png" width="40%" height="40%">
             <p class="day-description"> 
                 23 августа — День разгрома советскими войсками немецких войск в 
                 Курской битве (1943 год) <br> 23 августа 1943 года завершилась Курская битва 
@@ -159,7 +158,7 @@
      <!-- 3 сентября -->
      <div class="day-background">
         <div class="day-section section" id="6">
-            <img src="/static/images/map27.png" width="40%" height="40%">
+            <img src="images/map27.png" width="40%" height="40%">
             <p class="day-description"> 
                 3 сентября — День Победы над милитаристской Японией и окончания Второй 
                 мировой войны (1945 год) <br> 3 сентября 1945 года стало днем, когда была 
@@ -179,7 +178,7 @@
      <!-- 9 октября -->
      <div class="day-background">
         <div class="day-section section" id="7">
-            <img src="/static/images/map27.png" width="40%" height="40%">
+            <img src="images/map27.png" width="40%" height="40%">
             <p class="day-description"> 
                 9 октября — День разгрома советскими войсками немецко-фашистских войск в битве за Кавказ (1943 год) <br>
                 9 октября 1943 года советские войска одержали победу в битве за Кавказ, что стало важным этапом 
@@ -198,7 +197,7 @@
      <!-- 7 ноября -->
      <div class="day-background">
         <div class="day-section section" id="8">
-            <img src="/static/images/map27.png" width="40%" height="40%">
+            <img src="images/map27.png" width="40%" height="40%">
             <p class="day-description"> 
             7 ноября — День проведения военного парада на Красной площади в городе 
             Москве в ознаменование двадцать четвёртой годовщины Великой Октябрьской 
@@ -220,7 +219,7 @@
       <!-- 7 ноября -->
       <div class="day-background">
         <div class="day-section section" id="9">
-            <img src="/static/images/map27.png" width="40%" height="40%">
+            <img src="images/map27.png" width="40%" height="40%">
             <p class="day-description"> 
             5 декабря — День начала контрнаступления советских войск против немецко-фашистских войск в
             битве под Москвой (1941 год) <br> 5 декабря 1941 года началось контрнаступление советских 
