--- a/frontend/index.html
+++ b/frontend/index.html
@@ -241,8 +241,8 @@
 
     <!-- Тест -->
     <div class="test-section section" id="test">
-        <h2>Пройдите тест</h2>
-        <form id="quiz-form" action="submit.php" method="post">
+        <h2 class="test-header">Пройдите тест</h2>
+        <form id="quiz-form" action="/backend/submit.php" method="post">
             <label for="fio">Введите ФИО:</label>
             <input type="text" id="fio" name="fio" required><br>
                 
