--- a/frontend/test.html
+++ b/frontend/test.html
@@ -12,7 +12,7 @@
             <ul class="nav-list">
                 <li><a href="index.html" class="nav-link">В начало</a></li>
                 <li><a href="index.html#map" class="nav-link">Карта</a></li>
-                <li><a href="#test" class="nav-link">Пройти тест</a></li>
+                <li><a href="testinvite.html" class="nav-link">Пройти тест</a></li>
                 <li><a href="leaderboard.html" class="nav-link">Результаты</a></li>
             </ul>
         </nav>
