--- a/frontend/leaderboard.html
+++ b/frontend/leaderboard.html
@@ -12,7 +12,7 @@
             <ul class="nav-list">
                 <li><a href="index.html" class="nav-link">В начало</a></li>
                 <li><a href="index.html#map" class="nav-link">Карта</a></li>
-                <li><a href="test.html" class="nav-link">Пройти тест</a></li>
+                <li><a href="testinvite.html" class="nav-link">Пройти тест</a></li>
                 <li><a href="leaderboard.html" class="nav-link">Лидерборд</a></li>
             </ul>
         </nav>
@@ -21,7 +21,6 @@
     <div class="results-container">
         <h2>Результаты теста</h2>
         <div id="time-result" class="time-result">
-            <!-- Сюда будет вставлено время -->
         </div>
         <a href="index.html" class="glass-button">Вернуться на главную</a>
     </div>
@@ -37,9 +36,14 @@
             const timeString = `${minutes} мин ${seconds} сек`;
             
             // Показываем результаты
+            if (timeUsed == 0) {
+                timeResult.innerHTML = 'Вы еще не прошли тест';
+            }
+            else {
             timeResult.innerHTML = `
                 <p>Вы прошли тест за ${timeString}</p>
             `;
+            }
         });
     </script>
 </body>
