--- a/frontend/leaderboard.html
+++ b/frontend/leaderboard.html
@@ -22,6 +22,21 @@
         <h2>Результаты теста</h2>
         <div id="time-result" class="time-result">
         </div>
+
+         <table id="leaderboard-table" class="leaderboard-table">
+            <thead>
+                <tr>
+                    <th>ФИО</th>
+                    <th>Группа</th>
+                    <th>Оценка</th>
+                    <th>Время (сек)</th>
+                </tr>
+            </thead>
+            <tbody id="results-body">
+                <!-- Результаты будут добавлены здесь -->
+            </tbody>
+        </table>
+        
         <a href="index.html" class="glass-button">Вернуться на главную</a>
     </div>
     <script src="/backend/scriptLB.js"></script>
