Last commit (maybe)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,35 +56,32 @@
                 
                 <!-- Маркеры с подписями -->
                 <div class="markers-container">
-                    <a href="#1" class="marker" style="top: 25%; left: 30%;">
-                        <span class="marker-label">27 янв</span>
+                    <a href="#1" class="marker" style="top: 50%; left: 20%;">
+                        <span class="marker-label">27 января</span>
                     </a>
-                    <a href="#2" class="marker" style="top: 35%; left: 45%;">
-                        <span class="marker-label">2 фев</span>
+                    <a href="#2" class="marker" style="top: 68%; left: 29%;">
+                        <span class="marker-label">2 февраля</span>
                     </a>
-                    <a href="#3" class="marker" style="top: 50%; left: 60%;">
+                    <a href="#3" class="marker" style="top: 64%; left: 10%;">
                         <span class="marker-label">9 мая</span>
                     </a>
-                    <a href="#4" class="marker" style="top: 65%; left: 25%;">
+                    <a href="#4" class="marker" style="top: 71%; left: 23%;">
                         <span class="marker-label">12 мая</span>
                     </a>
-                    <a href="#5" class="marker" style="top: 25%; left: 55%;">
-                        <span class="marker-label">23 авг</span>
+                    <a href="#5" class="marker" style="top: 65%; left: 24%;">
+                        <span class="marker-label">23 августа</span>
                     </a>
-                    <a href="#6" class="marker" style="top: 40%; left: 40%;">
-                        <span class="marker-label">3 сен</span>
+                    <a href="#6" class="marker" style="top: 83%; left: 82%;">
+                        <span class="marker-label">3 сентября</span>
                     </a>
-                    <a href="#7" class="marker" style="top: 55%; left: 50%;">
-                        <span class="marker-label">9 окт</span>
+                    <a href="#7" class="marker" style="top: 72%; left: 28%;">
+                        <span class="marker-label">9 октября</span>
                     </a>
-                    <a href="#8" class="marker" style="top: 70%; left: 35%;">
-                        <span class="marker-label">7 ноя</span>
+                    <a href="#8" class="marker" style="top: 58%; left: 25%;">
+                        <span class="marker-label">7 ноября</span>
                     </a>
-                    <a href="#9" class="marker" style="top: 30%; left: 20%;">
-                        <span class="marker-label">5 дек</span>
-                    </a>
-                    <a href="#10" class="marker" style="top: 45%; left: 65%;">
-                        <span class="marker-label">18 апр</span>
+                    <a href="#9" class="marker" style="top: 59%; left: 24%;">
+                        <span class="marker-label">5 декабря</span>
                     </a>
                 </div>
             </div>
@@ -241,7 +238,7 @@
      <!-- 7 ноября -->
      <div class="day-background">
         <div class="day-section section" id="8">
-            <img src="images/map27.png" width="40%" height="40%">
+            <img src="images/8_img.png" width="40%" height="40%">
             <p class="day-description"> 
             7 ноября — День проведения военного парада на Красной площади в городе 
             Москве в ознаменование двадцать четвёртой годовщины Великой Октябрьской 
