--- a/frontend/index.html
+++ b/frontend/index.html
@@ -93,7 +93,7 @@
     <!-- 27 января -->
     <div class="day-background">
         <div class="day-section section" id="1">
-            <img src="images/map27.png" width="40%" height="40%">
+            <img src="images/1_img.png" width="40%" height="40%">
             <p class="day-description"> 
                 27 января — День полного освобождения Ленинграда от фашистской блокады 
                 (1944 год)<br> 27 января 1944 года стал знаковым днем в истории Великой 
