position viewer add

--- a/frontend/leaderboard.html
+++ b/frontend/leaderboard.html
@@ -22,6 +22,8 @@
         <h2>Результаты теста</h2>
         <div id="time-result" class="time-result">
         </div>
+        <div id="userPosition" class="user-position-message">
+        </div>
 
          <table id="leaderboard-table" class="leaderboard-table">
             <thead>
