Add gvozdika yo

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,6 +30,7 @@
 
 
     <!-- Вторая страница (описание сайта) -->
+    <div class="description-background">
     <div class="description-page section">
         <p class="main-description">
             <b>Дни воинской славы Великой Отечественной войны</b> <br>
@@ -44,6 +45,8 @@
             глубже понять, как эти дни воинской славы повлияли на судьбы миллионов.</p>
         </p>
     </div>
+    </div>
+    
     
 
     <div class="main-map section" id="map">
