--- a/frontend/index.html
+++ b/frontend/index.html
@@ -243,7 +243,7 @@
             </p>
 
             <div class="day-buttons">
-                <a href="#test" class="day-button">Пройти тест</a>
+                <a href="testinvite.html" class="day-button">Пройти тест</a>
                 <a href="#map" class="day-button">Вернуться к карте</a>
             </div>
         </div>
