--- a/frontend/test.html
+++ b/frontend/test.html
@@ -13,7 +13,7 @@
                 <li><a href="index.html" class="nav-link">В начало</a></li>
                 <li><a href="index.html#map" class="nav-link">Карта</a></li>
                 <li><a href="testinvite.html" class="nav-link">Пройти тест</a></li>
-                <li><a href="leaderboard.html" class="nav-link">Результаты</a></li>
+                <li><a href="leaderboard.html" class="nav-link">Лидерборд</a></li>
             </ul>
         </nav>
     </header>
