--- a/frontend/leaderboard.html
+++ b/frontend/leaderboard.html
@@ -28,6 +28,7 @@
          <table id="leaderboard-table" class="leaderboard-table">
             <thead>
                 <tr>
+                    <th>Место</th>
                     <th>ФИО</th>
                     <th>Группа</th>
                     <th>Оценка</th>
